--- a/public/index.html
+++ b/public/index.html
@@ -45,22 +45,28 @@
       <div class="container">
         <div class="boxes">
           <div class="box">
-            <img src="../public/assets/imgs/planet-earth_color.png">
-            <h4>Missão</h4>
+            <div>
+              <img src="../public/assets/imgs/planet-earth_color.png">
+              <h4>Missão</h4>
+            </div>
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Et, quas cupiditate asperiores provident magnam
               vitae illum iusto fugiat atque deleniti nulla sed iure suscipit, laborum, aliquid accusantium cum dicta
               minima.</p>
           </div>
           <div class="box">
-            <img src="../public/assets/imgs/lightbulb_color.png">
-            <h4>Visão</h4>
+            <div>
+              <img src="../public/assets/imgs/lightbulb_color.png">
+              <h4>Visão</h4>
+            </div>
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Et, quas cupiditate asperiores provident magnam
               vitae illum iusto fugiat atque deleniti nulla sed iure suscipit, laborum, aliquid accusantium cum dicta
               minima.</p>
           </div>
           <div class="box">
-            <img src="../public/assets/imgs/growth_color.png">
-            <h4>Valores</h4>
+            <div>
+              <img src="../public/assets/imgs/growth_color.png">
+              <h4>Valores</h4>
+            </div>
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Et, quas cupiditate asperiores provident magnam
               vitae illum iusto fugiat atque deleniti nulla sed iure suscipit, laborum, aliquid accusantium cum dicta
               minima.</p>
